Template webapp name.  Bugzilla #372
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1697 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -432,6 +432,7 @@
         </copy>
 		<move file="${idp.home}/etc/dist.idp.xml" tofile="${idp.home}/etc/idp.xml" overwrite="true" />
         <replace file="${idp.home}/etc/idp.xml" token="$IDP_HOME$" value="${idp.home.url}" />
+		<replace file="${idp.home}/etc/idp.xml" token="$IDP_WEBAPP_NAME$" value="${idp.webapp.name}" />
     </target>
 	
     <!-- copy SP configuration to $SP_HOME$/etc, overwriting any existing configuration -->
