--- a/build.xml
+++ b/build.xml
@@ -86,8 +86,9 @@
 		</copy>
 
 		<!-- Build extensions -->
-		<antcall target="build-exts">
+		<antcall target="ext-invoke">
 			<param name="exts.dir" value="${custom}"/>
+            <param name="ext.build.function" value="ext-build"/>      
 		</antcall>
 	</target>
 
@@ -118,8 +119,9 @@
 		<delete dir="${build}" />
 		<delete dir="${custom.libs}"/>
 		<delete dir="${custom.webapges}"/>
-	    <antcall target="ext-clean">
+	    <antcall target="ext-invoke">
 	    	<param name="exts.dir" value="${custom}"/>
+            <param name="ext.build.function" value="ext-clean"/>   
 	    </antcall>
 	</target>
 	<target name="clean-test">
@@ -408,6 +410,13 @@
 				<antcall target="install.idp.filesystem.config" />
 			</then>
 		</if>
+
+        <antcall target="ext-invoke">
+            <param name="exts.dir" value="${custom}"/>
+            <param name="ext.build.function" value="ext-install-filesystem"/>
+            <param name="ext.filesystem.home" value="${idp.home}"/>
+            <param name="ext.home.token" value="$IDP_HOME$"/>
+        </antcall>   
 	</target>
 
 	<!-- Install Shibboleth SP to filesystem using the properties in build.properties -->
@@ -440,6 +449,13 @@
 				<antcall target="install.sp.filesystem.config" />
 			</then>
 		</if>
+
+        <antcall target="ext-invoke">
+            <param name="exts.dir" value="${custom}"/>
+            <param name="ext.build.function" value="${ext-install-filesystem}"/>
+            <param name="ext.filesystem.home" value="${sp.home}"/>
+            <param name="ext.home.token" value="$SP_HOME$"/>
+        </antcall>      
 	</target>
 
 
