Line wrapping for warning messages.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1716 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -363,11 +363,11 @@
 		<if>
 			<available file="${idp.home}/etc" />
 			<then>
-				<echo>-----------------------------------------------------------------------------------------------------------</echo>
+				<echo>--------------------------------------------------------------------------------------</echo>
 				<echo>---</echo>
-				<echo>---   NOTE:  Existing Identiity Provider configuration at ${idp.home}/etc will not be overwritten.</echo>
+				<echo>---   NOTE:  Existing Identiity Provider configuration at ${idp.home}/etc ${line.separator}---   will not be overwritten.</echo>
 				<echo>---</echo>
-				<echo>-----------------------------------------------------------------------------------------------------------</echo>
+				<echo>--------------------------------------------------------------------------------------</echo>
 				<property name="copy-idp-conf" value="n" />
 			</then>
 			<else>
