Slew of documentation and minor functionality changes addresing those listed here
https://mail.internet2.edu/wws/arc/shibboleth-dev/2005-07/msg00142.html


git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1765 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/custom/extension-build.properties
+++ b/custom/extension-build.properties
@@ -8,8 +8,9 @@ ext.src.conf=${ext.root}/src-conf
 ext.test-src=${ext.root}/tests
 ext.webpages=${ext.root}/web
 ext.dist=${ext.root}/dist
-ext.classes=${ext.dist}/classes
-ext.docs=${ext.dist}/docs
+ext.build=${ext.root}/build
+ext.classes=${ext.build}/classes
+ext.docs=${ext.root}/doc/api
 
 # Properties controlling build behavior
 gen.ext.docs=true
