Extension filesystem install target correctly called now - fixes bug 418
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1808 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -474,7 +474,7 @@
 
         <antcall target="ext-invoke">
             <param name="exts.dir" value="${custom}"/>
-            <param name="ext.build.function" value="${ext-install-filesystem}"/>
+            <param name="ext.build.function" value="ext-install-filesystem"/>
             <param name="ext.filesystem.home" value="${sp.home}"/>
             <param name="ext.home.token" value="$SP_HOME$"/>
         </antcall>      
