Tests cases now compile and run properly - fixes bug 421
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1812 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/custom/extension-build.properties
+++ b/custom/extension-build.properties
@@ -5,11 +5,12 @@ ext.etc=${ext.root}/etc
 ext.lib=${ext.root}/lib
 ext.src=${ext.root}/src
 ext.src.conf=${ext.root}/src-conf
-ext.test-src=${ext.root}/tests
+ext.test.src=${ext.root}/tests
 ext.webpages=${ext.root}/web
 ext.dist=${ext.root}/dist
 ext.build=${ext.root}/build
 ext.classes=${ext.build}/classes
+ext.test.classes=${ext.build}/tests
 ext.docs=${ext.root}/doc/api
 
 # Properties controlling build behavior
