--- a/.classpath
+++ b/.classpath
@@ -29,5 +29,10 @@
 	<classpathentry kind="lib" path="lib/ant-1.6.3.jar"/>
 	<classpathentry kind="lib" path="endorsed/xalan.jar"/>
 	<classpathentry kind="lib" path="endorsed/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="testlib/jakarta-oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="testlib/jdom.jar"/>
+	<classpathentry kind="lib" path="testlib/mockrunner-servlet.jar"/>
+	<classpathentry kind="lib" path="testlib/nekohtml.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
