corrected reference to testing classpath
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1833 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -178,7 +178,7 @@
 			    <fileset dir="${custom.libs}">
 			    	<include name="*.jar"/>
 			    </fileset>
-			    <filelist refid="test.path"/>
+			    <path refid="test.path"/>
 			</classpath>
 			<formatter type="plain" />
 			<test name="edu.internet2.middleware.shibboleth.aa.arp.ArpTests" />
@@ -198,7 +198,7 @@
 				<fileset dir="${custom.libs}">
 					<include name="*.jar"/>
 				</fileset>
-				<filelist refid="test.path"/>
+		        <path refid="test.path"/>
 			</classpath>
 			<formatter type="plain" />
 			<test name="edu.internet2.middleware.shibboleth.aap.AAPTests" />
