add an SP parameter
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1854 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/conf/default.build.properties
+++ b/conf/default.build.properties
@@ -8,5 +8,6 @@ tomcat.home=/usr/local/tomcat
 idp.webapp.name=shibboleth-idp
 sp.webapp.name=shibboleth-sp
 idp.install-type=filesystem.prompt
+sp.install-type=filesystem.prompt
 idp.deployment.descriptor=dist.idp.xml
 sp.deployment.descriptor=dist.sp.xml
