create separate sp.xml files for testing with IQ and a local IdP
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1858 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -552,7 +552,7 @@
 		<copy todir="${sp.home}/etc" overwrite="true">
 			<fileset dir="${src}/conf" includesfile="conf/sp-conf.include"/>
 		</copy>
-		<move file="${sp.home}/etc/dist.sp.xml" tofile="${sp.home}/etc/sp.xml" overwrite="true" />
+		<move file="${sp.home}/etc/dist.sp-iqidp.xml" tofile="${sp.home}/etc/sp.xml" overwrite="true" />
 		<replace file="${sp.home}/etc/sp.xml" token="$SP_HOME$" value="${sp.home.url}" />
 	</target>
 
