Included black-box IdP tests in standared test suite.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1894 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -188,6 +188,8 @@
 			<test name="edu.internet2.middleware.shibboleth.common.TrustTests" />
 			<test name="edu.internet2.middleware.shibboleth.idp.provider.DNHostNameExtractionTests" />
 			<test name="edu.internet2.middleware.shibboleth.metadata.MetadataTests" />
+			<test name="edu.internet2.middleware.shibboleth.idp.SSOTest" />      
+			<test name="edu.internet2.middleware.shibboleth.idp.AATest" />    
 		</junit>
 	</target>
 
