SDSS WAYF patch for multi-federation support
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1908 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -304,6 +304,7 @@
 	<target name="package-wayf" depends="compile" description="Creates the WAYF war and moves it to ${dist}">
         <copy file="${appconfig}/schemas.properties" todir="${approot}/WEB-INF/classes/conf"/>
         <copy file="${appconfig}/wayfconfig.xml" todir="${approot}/WEB-INF/classes/conf"/>
+    	<copy file="${appconfig}/log4j.properties" tofile="${build}/log4j.properties" failonerror="false"/>
             
 		<war warfile="${dist}/${distnameWayf}.war" webxml="${configroot}/wayf.xml" basedir="${approot}" update="no"/>
 	</target>
