Removed stale SP unit test from test target.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1941 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/build.xml
+++ b/build.xml
@@ -169,7 +169,7 @@
 	</target>
 
 	<!-- Run automated tests on compiled code -->
-	<target name="test-all" depends="test-IdP, test-SP" />
+	<target name="test-all" depends="test-IdP" />
 
 	<target name="test-IdP" depends="compile-tests">
 		<junit printsummary="no" fork="yes" haltonfailure="yes" haltonerror="yes" dir="${root}">
