Added the ability for the resolver to compute attribute values via scripts included in the resolver configuration.
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/trunk@1945 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 	<classpathentry kind="lib" path="testlib/nekohtml.jar"/>
 	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.1.jar"/>
+	<classpathentry kind="lib" path="webApplication/WEB-INF/lib/bsh-2.0b1.jar"/>
 	<classpathentry kind="output" path="webApplication/WEB-INF/classes"/>
 </classpath>
